# physfs

./: Cargo.toml  build.rs  physfs.h  physfs_bindings.rs  wrapper.h
src/: lib.rs
