[package]
name = "physfs"
build = "build.rs"
version = "0.0.1"
authors = ["sypwex <sypwex@gmail.com>"]
edition = "2018"

# [lib]
# name = "physfs_sys"
# path = "src/sys.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true

[dependencies]
log = "0.4.14"
env_logger = "0.11.3"
wasm-bindgen = "0.2.92"

[build-dependencies]
bindgen = "0.69.4"
